--- a/app/src/main/res/layout/activity_note_details.xml
+++ b/app/src/main/res/layout/activity_note_details.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/container"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/note_list_fragment"
-    android:name="com.gmail.notebook.ui.list.NoteListFragment"
-    tools:context=".ui.MainActivity">
+    tools:context=".ui.details.NoteDetailsActivity"/>
 
-
-</fragment>
